agregado el cv para descargar e  icono al boton

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio Michael Robayo Diaz</title>
-   
+
     <link rel="stylesheet" href="styles.css" />
     <script>
       (function () {
@@ -69,7 +69,16 @@
               convertirme en un <strong>desarrollador full-stack</strong>.
             </p>
             <div class="social-links">
-              <button>Resumen</button>
+              <a
+                href="images/cv.pdf"
+                target="_blank"
+                rel="noopener noreferrer"
+                download
+              >
+                 <button>CV 
+                  <img src="images/downloading.png" alt="icono de descarga de cv" width="20px" height="20px" > </button>
+              </a>
+             
 
               <a href="mailto:michaelrobayo.dev@gmail.com" target="_blank">
                 <img src="images/arroba.webp" alt="link to my email" />
@@ -263,13 +272,16 @@
           <a href="mailto:michaelrobayo.dev@gmail.com" target="_blank"
             ><img src="images/arroba.webp" alt="link to my email"
           /></a>
-          <a href="https://github.com/MichaelStivendev" target="_blank" >
+          <a href="https://github.com/MichaelStivendev" target="_blank">
             <img src="images/github.svg" alt="link to my github" />
           </a>
-          <a href="https://www.linkedin.com/in/michael-stiven-robayo-diaz-730303367/" target="_blank">
+          <a
+            href="https://www.linkedin.com/in/michael-stiven-robayo-diaz-730303367/"
+            target="_blank"
+          >
             <img src="images/linkedin.svg" alt="link to my linkedin" />
           </a>
-          <a href="https://x.com/MisdiCode" target="_blank" >
+          <a href="https://x.com/MisdiCode" target="_blank">
             <img src="images/twitter.png" alt="Link to my x" />
           </a>
         </div>
